# santa-rita-diesel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 2973ab3fcccd_create_auth_tables.py  51fba7fd95da_create_finance_tables.py  64e3395b5617_create_auth_tables.py  8b106a6a88c2_create_customers_and_suppliers.py  9dac5590e8b7_create_maintenance_tables.py  cfd12c32ef33_create_vehicles_and_drivers.py  d243f046a62b_create_documents_table.py  db494ce788ae_create_operations.py
backend/src/: main.py
backend/src/core/: config.py  database.py  dependencies.py  errors.py  middleware.py  pagination.py  security.py  seed.py
backend/src/modules/auth/application/: dtos.py  service.py
backend/src/modules/auth/presentation/: dependencies.py  routes.py
backend/src/modules/customers/application/: dtos.py  service.py
backend/src/modules/customers/domain/: __init__.py  models.py
backend/src/modules/customers/presentation/: routes.py
backend/src/modules/dashboard/application/: dtos.py  service.py
backend/src/modules/dashboard/presentation/: routes.py
backend/src/modules/documents/application/: dtos.py  service.py
backend/src/modules/documents/domain/: models.py
backend/src/modules/documents/presentation/: routes.py
backend/src/shared/: base_entity.py
backend/src/shared/services/: __init__.py  geocoding.py  storage.py
backend/src/shared/value_objects/: __init__.py  address.py
backend/tests/unit/: test_health.py
docker/: backend.Dockerfile
(+110 files in other folders)
